--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "*.php": {
+    "api/*.php": {
       "runtime": "vercel-php@0.5.2"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
